--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -17,7 +17,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarProgramMenuLink">
                         <li><a class="dropdown-item" href="/employemgt">Add</a></li>
                         <li><a class="dropdown-item" href="#">Edit</a></li>
-                        <li><a class="dropdown-item" href="#">List</a></li>
+                        <li><a class="dropdown-item" href="/list">List</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
