got edit working

--- a/views/partials/update-eval-form.ejs
+++ b/views/partials/update-eval-form.ejs
@@ -1,5 +1,5 @@
 <div class="text-center mt-5">
-<form class="form-horizontal bg-light" action="/submit_eval1_form/<%= evalpage %>" method="post" style="width: 100%;margin:auto;">
+<form class="form-horizontal bg-light" action="/submit_edit_eval1_form/<%= evalpage %>" method="post" style="width: 100%;margin:auto;">
 
 <!-- Select Employee -->
 <select class="form-select" name="employee_id" id='employee_selection' aria-label="Default select example">
@@ -33,48 +33,90 @@
     <div class="col-sm form-check form-check-inline radio-box">
       <p class="h6" >Poor</p>
      <label class="radio-inline" for="radios-0<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-0<%= index %>" value="1" checked="checked">
+      <input type="radio" name="radios<%= index %>" id="radios-0<%= index %>" value="1" 
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 1){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       1
      </label> 
     </div>
     <div class="col-sm form-check form-check-inline radio-box">
       <p class="h6" >Average</p>
      <label class="radio-inline" for="radios-1<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-1<%= index %>" value="2">
+      <input type="radio" name="radios<%= index %>" id="radios-1<%= index %>" value="2"
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 2){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       2
      </label> 
    </div>
    <div class="col-sm form-check form-check-inline radio-box">
     <p class="h6" >Good</p>
     <label class="radio-inline" for="radios-2<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-2<%= index %>" value="3">
+      <input type="radio" name="radios<%= index %>" id="radios-2<%= index %>" value="3"
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 3){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       3
     </label> 
    </div>
    <div class="col-sm form-check form-check-inline radio-box">
     <p class="h6" >Excellent</p>
     <label class="radio-inline" for="radios-3<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-3<%= index %>" value="4">
+      <input type="radio" name="radios<%= index %>" id="radios-3<%= index %>" value="4"
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 4){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       4
     </label>
    </div>
    <div class="col-sm form-check form-check-inline radio-box">
     <p class="h6" >Outstanding</p>
     <label class="radio-inline" for="radios-4<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-4<%= index %>" value="5">
+      <input type="radio" name="radios<%= index %>" id="radios-4<%= index %>" value="5"
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 5){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       5
     </label>
    </div>
    <div class="col-sm form-check form-check-inline radio-box">
     <p class="h6" >N/A</p>
     <label class="radio-inline" for="radios-5<%= index %>">
-      <input type="radio" name="radios<%= index %>" id="radios-5<%= index %>" value="0">
+      <input type="radio" name="radios<%= index %>" id="radios-5<%= index %>" value="0"
+	<%if( (typeof reviewed =='object') && reviewed.length > 0 ){%>
+	   <%if(reviewed[index].rating == 0){%>
+		<%=checked="checked"%>
+ 	   <%}%>
+ 	<%}%>
+      >
       -
     </label>
   </div>
   <div class="col col-lg-3 form-check form-check-inline">
         <label for="evalnote<%= index %>">Notes</label>
-    <textarea type="text" class="form-control" name="evalnote<%= index %>" id="evalnote<%= index %>" placeholder="Enter Notes"></textarea>
+    <textarea type="text" class="form-control" name="evalnote<%= index %>" id="evalnote<%= index %>" placeholder=
+	<%if( (typeof notes =='object') && notes.length > 0 ){%>
+	   <%=notes[index].comments%> 
+ 	<%} else {%>
+		"Enter Notes"
+ 	<%}%>
+    ></textarea>
   </div>
  </div>
 <% }); %>
