--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -16,7 +16,7 @@
                    <a href="#" class="nav-link dropdown-toggle" id="navbarProgramMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Employees</a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarProgramMenuLink">
                         <li><a class="dropdown-item" href="/employemgt">Add</a></li>
-                        <li><a class="dropdown-item" href="#">Edit</a></li>
+                        <li><a class="dropdown-item" href="/edit">Edit</a></li>
                         <li><a class="dropdown-item" href="/list">List</a></li>
                     </ul>
                 </li>
